# usrchat

./: Cargo.toml
ai_client/: Cargo.toml
ai_client/src/: client.rs  functions.rs  lib.rs
api/: Cargo.toml
api/src/: main.rs
