[package]
name = "ai_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.12.1"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
